# whist

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
csrc/: minimax.cpp
report/: main.tex  references.bib
report/sections/: ai_design.tex  conclusions.tex  game_rules.tex  introduction.tex  phase1_strategy.tex  phase2_analysis.tex  simulation_results.tex
src/whist/: __main__.py  main.py
src/whist/core/: card.py  deck.py  game.py  game_state.py  trick.py
src/whist/players/: base.py  heuristic.py  human.py  random_player.py
src/whist/players/ai/: ai_player.py  card_counter.py  evaluator.py  ismcts.py  minimax.py
src/whist/simulation/: analysis.py  arena.py  runner.py
src/whist/ui/: terminal.py
tests/: test_card.py  test_game.py  test_minimax.py  test_simulation.py  test_trick.py
