[build-system]
requires = ["setuptools>=68.0", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "whist"
version = "0.1.0"
description = "German Whist card game with AI opponent and strategy analysis"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
whist = "whist.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
